tests/test_data/invalid_semantics/type_checking/passing_function_as_int.c
int f(int x, int y)
{
  return x + y;
}

int main(void)
{
  return f(42, f);
}
